
public interface BankServiceOrganizer {

    /**
     * @param bankEntity
     */
    public void entityChanged(BankEntity bankEntity);

}
